--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.5'
+    implementation("com.google.guava:guava:31.1-jre")
 }
 
 task forwardSolver(type: Exec) {
