--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     implementation("com.google.guava:guava:31.1-jre")
+    implementation group: 'com.google.inject', name: 'guice', version: '5.1.0'
 }
 
 task forwardSolver(type: Exec) {
