--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    implementation "com.google.guava:guava:31.1-jre"
+//    implementation "com.google.guava:guava:31.1-jre"
     implementation group: 'com.google.inject', name: 'guice', version: '5.1.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
 }
