--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -58,3 +58,6 @@ about=About
 section=Section
 openSection=Open Section (JSON)
 newModel=Create model
+# Гео-разрез
+geoSectionX=Pickets
+geoSectionY=Layers
