--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation 'org.hibernate.validator:hibernate-validator:7.0.3.Final'
     implementation 'org.glassfish.expressly:expressly:5.0.0-M1'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.2"
+    testImplementation 'org.openjfx:javafx:17.0.2'
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
