--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -3,6 +3,8 @@ version=ver. PREVIEW
 file=File
 open=Open
 edit=Edit
+undo=Undo
+redo=Redo
 help=Help
 import=Import
 close=Close
@@ -59,3 +61,5 @@ section=Section
 openSection=Open Section (JSON)
 newModel=Create model
 export=Export
+expData=Experimental Data
+modData=Model Data
