--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -56,10 +56,13 @@ minimalDataWillBeDisplayed=Minimal possible amount of data will be displayed
 fileNotFound=File not found
 picket=Picket
 save=Save
+saveSection=Save Section
 about=About
 section=Section
-openSection=Open Section (JSON)
+openSection=Open Section
 newModel=Create model
 export=Export
 expData=Experimental Data
 modData=Model Data
+saveAs=Save As
+saveSectionAs=Save Section As 
