drag n drop file in no file screen

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -65,4 +65,5 @@ export=Export
 expData=Experimental Data
 modData=Model Data
 saveAs=Save As
-saveSectionAs=Save Section As 
+saveSectionAs=Save Section As
+drag=Or drag and drop file here
