--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainClass = 'ru.nucodelabs.gem.core.StartGemApplication'
+    mainClass = 'ru.nucodelabs.gem.app.StartGemApplication'
 }
 
 javafx {
