--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -69,3 +69,6 @@ saveSectionAs=Save Section As
 drag=Or drag and drop file here
 recentFiles=Recent files
 clear=Clear
+add=Add
+polarizationApp=Кажущаяся поляризация
+errorPolApp=Погрешность кажущ. поляризации
