--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,13 @@ import org.gradle.internal.jvm.Jvm
 import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 
 buildscript {
+    ext.kotlin_version = '1.7.0'
     dependencies {
         classpath "io.github.fvarrui:javapackager:${DefaultNativePlatform.currentOperatingSystem.isMacOsX() ? "1.6.3" : "1.6.4"}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    repositories {
+        mavenCentral()
     }
 }
 
@@ -19,6 +24,7 @@ plugins {
 }
 
 apply plugin: 'io.github.fvarrui.javapackager.plugin'
+apply plugin: 'kotlin'
 
 group 'ru.nucodelabs'
 version '1.0-SNAPSHOT'
@@ -95,6 +101,7 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     implementation group: 'com.google.inject', name: 'guice', version: '5.1.0'
     implementation group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '5.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 task forwardSolver(type: Exec) {
@@ -241,5 +248,15 @@ task packageLinuxApplication(type: PackageTask, dependsOn: build) {
         generateRpm = true
         wrapJar = true
         pngFile = file("src/main/resources/img/gem.png")
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
