--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 }
 
 plugins {
+    id "org.jetbrains.dokka" version "1.6.21"
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.11'
