--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -24,13 +24,13 @@ experimentalTable=Experimental Table
 # Таблица экспериментальных данных
 experimentalAB_2=AB/2 (m)
 experimentalMN_2=MN/2 (m)
-experimentalResistanceApparent=Apparent resistance ρₐ (Ohm‧m)
+experimentalResistanceApparent=Apparent resistance ρₐ (Ω‧m)
 experimentalAmperage=Amperage (mA)
 experimentalVoltage=Voltage (mV)
 experimentalErrorResistanceApparent=Error ρₐ (%)
 # Таблица экспериментальных данных
 modelPower=Power (m)
-modelResistanceApparent=Resistance ρ (Ohm‧m)
+modelResistanceApparent=Resistance ρ (Ω‧m)
 modelPolarization=Polarization (%)
 view=View
 legend=Chart legends
