таблицы: названия + тултипы на колонках

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -22,15 +22,15 @@ modelTable=Model
 misfit=Misfit
 experimentalTable=Experimental Table
 # Таблица экспериментальных данных
-experimentalAB_2=AB/2 (m)
-experimentalMN_2=MN/2 (m)
-experimentalResistanceApparent=Apparent resistance ρₐ (Ω‧m)
-experimentalAmperage=Amperage (mA)
-experimentalVoltage=Voltage (mV)
-experimentalErrorResistanceApparent=Error ρₐ (%)
+ab2=AB/2 (m)
+mn2=MN/2 (m)
+resistanceApparentFull=Apparent resistance ρₐ (Ω‧m)
+amperage=Amperage (mA)
+voltage=Voltage (mV)
+errorResistanceApparent=Error ρₐ (%)
 # Таблица экспериментальных данных
-modelPower=Power (m)
-modelResistanceApparent=Resistance ρ (Ω‧m)
+power=Power (m)
+resistance=Resistance ρ (Ω‧m)
 modelPolarization=Polarization (%)
 view=View
 legend=Chart legends
