--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,7 @@ dependencies {
     implementation group: 'com.google.inject', name: 'guice', version: '5.1.0'
     implementation group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '5.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+//    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     // https://mvnrepository.com/artifact/org.tinfour/TinfourCore
     implementation group: 'org.tinfour', name: 'TinfourCore', version: '2.1.7'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
