поддержка вставки из буффера

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -74,3 +74,4 @@ polarizationApp=Кажущаяся поляризация
 errorPolApp=Погрешность кажущ. поляризации
 offset=Смещение
 addPicket=Новый пикет
+pasteFromClipboard=Вставить из буфера обмена
