отключение подписи графиков

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -75,3 +75,4 @@ errorPolApp=Погрешность кажущ. поляризации
 offset=Смещение
 addPicket=Новый пикет
 pasteFromClipboard=Вставить из буфера обмена
+graphTitles=Подписи графиков
