разрез в отдельном окне

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -76,3 +76,4 @@ offset=Смещение
 addPicket=Новый пикет
 pasteFromClipboard=Вставить из буфера обмена
 graphTitles=Подписи графиков
+sectionInSeparateWindow=Разрез в отдельном окне
