без графика, работает

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -77,3 +77,4 @@ addPicket=Новый пикет
 pasteFromClipboard=Вставить из буфера обмена
 graphTitles=Подписи графиков
 sectionInSeparateWindow=Разрез в отдельном окне
+kFull=Геометрический коэффициент
