--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -78,3 +78,4 @@ pasteFromClipboard=Вставить из буфера обмена
 graphTitles=Подписи графиков
 sectionInSeparateWindow=Разрез в отдельном окне
 kFull=Геометрический коэффициент
+authors=Авторы
