сохранение графиков разреза в виде картинок

--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ application {
 
 javafx {
     version = jfxVersion
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.swing']
 }
 
 dependencies {
