--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -79,3 +79,4 @@ graphTitles=Подписи графиков
 sectionInSeparateWindow=Разрез в отдельном окне
 kFull=Геометрический коэффициент
 authors=Авторы
+normalization=Нормализация
