--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  packageMacArm64:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v3
