--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ permissions:
   contents: read
 
 jobs:
-  packageMacArm64:
+  packageMacX64:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +26,6 @@ jobs:
       with:
         java-version: '17'
         distribution: 'zulu'
-        architecture: 'aarch64'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
