--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,23 @@ jobs:
       with:
         java-version: '17'
         distribution: 'zulu'
+        cache: 'gradle'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
         arguments: packageMacApp
+        
+  packageWindowsx64:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'zulu'
+        cache: 'gradle'
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: packageWindowsExe
