--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,11 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: packageMacApp
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+        with:
+          name: gem_mac-x64
+          path: build/GEM/GEM.app
         
   packageWindowsx64:
     runs-on: windows-latest
@@ -46,3 +51,8 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: packageWindowsExe
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+        with:
+          name: gem_win-x64
+          path: build/GEM/*
