--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     implementation "org.bytedeco:openblas:0.3.13-1.5.8:$platform"
     implementation "org.bytedeco:javacpp:1.5.8:$platform"
     implementation "org.bytedeco:arpack-ng:3.8.0-1.5.8:$osName-x86_64"
+    implementation "org.bytedeco:arpack-ng:3.8.0-1.5.8"
     implementation 'org.codehaus.groovy:groovy-all:3.0.13'
 //    runtimeOnly("org.jetbrains.kotlin:kotlin-scripting-jsr223:$kotlin_version")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
