--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import io.github.fvarrui.javapackager.gradle.PackageTask
+import io.github.fvarrui.javapackager.model.MacStartup
 import io.github.fvarrui.javapackager.model.SetupMode
 import io.github.fvarrui.javapackager.model.WindowsExeCreationTool
 import org.gradle.internal.jvm.Jvm
@@ -186,6 +187,7 @@ javapackager {
 task packageMacApp(type: PackageTask, dependsOn: build) {
     generateInstaller = false
     macConfig {
+        macStartup = MacStartup.UNIVERSAL
         icnsFile = file("src/main/resources/img/gem.icns")
         generateDmg = false
         generatePkg = false
