--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 buildscript {
     ext.kotlin_version = '1.7.22'
     dependencies {
-        classpath "io.github.fvarrui:javapackager:${DefaultNativePlatform.currentOperatingSystem.isMacOsX() ? "1.6.3" : "1.6.4"}"
+        classpath "io.github.fvarrui:javapackager:1.6.7"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
     repositories {
