--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,8 +19,6 @@ permissions:
 jobs:
   packageMacApp_x64:
     runs-on: macos-latest
-    env:
-      artifact_name: gem_${{ runner.os }}-${{ runner.arch }}_${{ github.ref_name }}-${{ github.sha }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 
@@ -36,13 +34,11 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ artifact_name }}
+        name: gem_${{ runner.os }}-${{ runner.arch }}_${{ github.ref_name }}-${{ github.sha }}
         path: build/GEM/*
         
   packageWindowsExe_x64:
     runs-on: windows-latest
-    env:
-      artifact_name: gem_${{ runner.os }}-${{ runner.arch }}_${{ github.ref_name }}-${{ github.sha }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 
@@ -58,5 +54,5 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ artifact_name }}
+        name: gem_${{ runner.os }}-${{ runner.arch }}_${{ github.ref_name }}-${{ github.sha }}
         path: build/GEM/*
