--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -80,3 +80,4 @@ sectionInSeparateWindow=Разрез в отдельном окне
 kFull=Геометрический коэффициент
 authors=Авторы
 normalization=Нормализация
+additive=δₐ (add) [(Ω‧m)⁻¹]
