--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 
 buildscript {
     ext.kotlin_version = '1.7.22'
-    dependencies {
-        classpath "io.github.fvarrui:javapackager:1.6.7"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
     repositories {
         mavenCentral()
+    }
+    dependencies {
+        classpath "io.github.fvarrui:javapackager:1.7.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -187,6 +187,7 @@ task packageMacApp(type: PackageTask, dependsOn: build) {
         icnsFile = file("src/main/resources/img/gem.icns")
         generateDmg = false
         generatePkg = false
+        codesignApp = false
     }
     additionalResources =
             javapackager.additionalResources + [file("${projectDir}/colormap")]
