--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,4 +57,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: gem_${{ runner.os }}-${{ runner.arch }}_${{ github.ref_name }}-${{ github.sha }}
-        path: build/GEM/*
+        path: build/*.dmg
